--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: placeholder
 Type: Book
-Title: Does not matter.
+Title: 리보그
 Version: 0.0.1
 Imports: bookdown
-Remotes: rstudio/bookdown
+Remotes: statkclee/reeborg
