solved rain puzzles

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,7 +9,8 @@ rmd_files: [
   "02-around.Rmd",
   "03-center.Rmd",
   "04-harvest.Rmd",
-  "05-hurdle.Rmd"]
+  "05-hurdle.Rmd",
+  "06-rain.Rmd"]
 new_session: 'yes'
 output_dir: docs
 
